# esp32-c6_LVGL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
SquareLineProj/: ESP32_C6_LCD.sll  ESP32_C6_LCD.spj
components/: lv_conf.h
main/: CMakeLists.txt  idf_component.yml  main.c
main/ui/: ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
main/ui/screens/: ui_Screen1.c
